// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectCard /> as a link matches with snapshot 1`] = `
<a
  className="sc-edERGn gYotwv k-ProjectCard k-ProjectCard--normal"
  href="//hello.world"
>
  <div
    className="k-ProjectCard__image"
  >
    <img
      alt="image alt"
      className="k-ProjectCard__image__image"
      src="kitten.jpg"
    />
  </div>
  <div
    className="k-ProjectCard__content"
  >
    <h1
      className="sc-jUosCB dlDQII k-Title k-ProjectCard__title k-Title--septenary k-Title--noMargin"
      style={
        Object {
          "--Title-css-color": null,
        }
      }
    >
      <span
        width={0}
      >
        <span />
        <span>
          The Office, la série culte décortiquée par S!CK
        </span>
        <span
          style={
            Object {
              "left": 0,
              "position": "fixed",
              "top": 0,
              "visibility": "hidden",
            }
          }
        >
          …
        </span>
      </span>
    </h1>
    <div
      className="k-ProjectCard__line"
    >
      <span>
        par
         
        <a
          className="k-u-link k-u-link-font1 k-u-weight-bold"
          href="#"
        >
          Bidules
        </a>
      </span>
    </div>
    <div
      className="k-ProjectCard__item"
    >
      <span>
        134
      </span>
      <span>
        contributeurs
      </span>
    </div>
    <div
      className="k-ProjectCard__item"
    >
      <span>
        7 jours
      </span>
      <span>
        restants
      </span>
    </div>
    <div
      className="k-ProjectCard__item"
    >
      <span>
        9 930 €
      </span>
      <span>
        sur 12 000 €
      </span>
    </div>
    <div
      className="k-ProjectCard__progress"
    >
      <div
        aria-label="Progrès de la campagne"
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={55}
        className="sc-hGPBjI jCetTb k-Meters-Progress"
        role="progressbar"
        style={
          Object {
            "--progress-color": "var(--color-primary-500, #19b4fa)",
            "--progress-value": "55%",
          }
        }
      >
        <div
          className="k-Meters-Progress__ramp"
        />
      </div>
      <span
        className="k-u-line-height-1 k-u-size-tiny k-u-weight-bold k-u-hidden@xs-down k-ProjectCard__progress__text"
      >
        55
         %
      </span>
    </div>
  </div>
</a>
`;

exports[`<ProjectCard /> by default matches with snapshot 1`] = `
<div
  className="sc-edERGn gYotwv k-ProjectCard k-ProjectCard--normal"
>
  <div
    className="k-ProjectCard__image"
  >
    <img
      alt="image alt"
      className="k-ProjectCard__image__image"
      src="kitten.jpg"
    />
  </div>
  <div
    className="k-ProjectCard__content"
  >
    <div
      className="k-ProjectCard__sticker k-u-ellipsis k-u-hidden@xs-down"
    >
      Prolongation
    </div>
    <h1
      className="sc-jUosCB dlDQII k-Title k-ProjectCard__title k-Title--septenary k-Title--noMargin"
      style={
        Object {
          "--Title-css-color": null,
        }
      }
    >
      <span
        width={0}
      >
        <span />
        <span>
          The Office, la série culte décortiquée par S!CK
        </span>
        <span
          style={
            Object {
              "left": 0,
              "position": "fixed",
              "top": 0,
              "visibility": "hidden",
            }
          }
        >
          …
        </span>
      </span>
    </h1>
    <div
      className="k-ProjectCard__line"
    >
      <span>
        par
         
        <a
          className="k-u-link k-u-link-font1 k-u-weight-bold"
          href="#"
        >
          Bidules
        </a>
      </span>
    </div>
    <div
      className="k-ProjectCard__item"
    >
      <span>
        134
      </span>
      <span>
        contributeurs
      </span>
    </div>
    <div
      className="k-ProjectCard__item"
    >
      <span>
        7 jours
      </span>
      <span>
        restants
      </span>
    </div>
    <div
      className="k-ProjectCard__item"
    >
      <span>
        9 930 €
      </span>
      <span>
        sur 12 000 €
      </span>
    </div>
    <div
      className="k-ProjectCard__progress"
    >
      <div
        aria-label="Progrès de la campagne"
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={0}
        className="sc-hGPBjI jCetTb k-Meters-Progress"
        role="progressbar"
        style={
          Object {
            "--progress-color": "var(--color-primary-500, #19b4fa)",
            "--progress-value": "0%",
          }
        }
      >
        <div
          className="k-Meters-Progress__ramp"
        />
      </div>
      <span
        className="k-u-line-height-1 k-u-size-tiny k-u-weight-bold k-u-hidden@xs-down k-ProjectCard__progress__text"
      >
        55
         %
      </span>
    </div>
  </div>
</div>
`;
